<resources>
    <string name="app_name">Homework1</string>

    <string name="Name">Имя</string>
    <string name="Height">Рост</string>
    <string name="Weight">Вес</string>
    <string name="Age">Возраст</string>
    <string name="Submit">Подтвердить</string>

    <string name="name_hint">Иван</string>
    <string name="height_hint">176</string>
    <string name="weight_hint">63.6</string>
    <string name="age_hint">21</string>
</resources>